# lazy-shuffle

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
shuffler/: Cargo.toml
shuffler/src/: lib.rs
src/: lib.rs
